Fix color themes and dark mode switcher

--- a/web/pages/globals.css
+++ b/web/pages/globals.css
@@ -15,3 +15,10 @@ html {
 }
 
 @import 'tailwindcss';
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --color-ukraine-blue: #0057b7;
+  --color-ukraine-yellow: #ffd700;
+}
